--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.2"
+    "@astrojs/markdoc": "^0.12.4",
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vue": "^5.0.4",
+    "astro": "^5.1.2",
+    "tailwindcss": "^3.4.17",
+    "vue": "^3.5.13"
   }
 }
