--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vue": "^5.0.4",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^5.1.2",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13"
